ResourceMark may be missing inside initialize_[vi]table

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b03

      After JDK-8178350, try removing this line inside InstanceKlass::link_class_impl():

      - ResourceMark rm(THREAD); // delete
              vtable().initialize_vtable(true, CHECK_false);
              itable().initialize_itable(true, CHECK_false);

      You will get an assert about missing ResourceMark. It's unclear to me whether whether the allocated object(s) should be scoped, or should be returned to a higher scope. If it's the former, it's better to remove the above ResourceMark, and add a ResourceMark where it's needed.

      More investigation is needed.

            Assignee:
            Lois Foltan
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: