8178712: ResourceMark may be missing inside initialize_[vi]table

Clean up use of ResourceMark within initialize_[vi]table.

Reviewed-by: ccheung, iklam, jiangli